# oxidized_kernel

./: Cargo.toml  Makefile  Xargo.toml  x86_64-oxidized_kernel.json
assembler_src/arch/x86_64/: EntryPoint.asm  LongModeEntry.asm  grub.cfg  linker.ld
src/: lib.rs
src/acpi/: fadt.rs  gas.rs  madt.rs  mod.rs  sdt.rs  xsdt.rs
src/devices/: apic.rs  io_apic.rs  mod.rs
src/framebuffer/: font_8x16.rs  mod.rs  vga_text_buffer.rs  writer.rs
src/framebuffer/rgb_framebuffer/: font_8x16.rs  mod.rs
src/interrupts/: exceptions.rs  gdt.rs  irq.rs  mod.rs
src/memory/: area_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: active_table.rs  entry.rs  inactive_table.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/syscall/: mod.rs
src/vga_text_buffer/: .mod.rs.swp  mod.rs
