[package]
name = "oxidized_kernel"
version = "0.1.0"
authors = ["Gravechapa <Gravechapa@protonmail.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"
multiboot2 = "0.3.2"
bitflags = "1.0.1"
x86_64 = "0.1.2"
once = "0.3.3"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]